some new things

--- a/server/frontend/view/index.html
+++ b/server/frontend/view/index.html
@@ -8,6 +8,10 @@
     <script src= "/public/script/script.js"></script>
 </head>
 <body>
+    <div id="login">
+        <input type="text" id="name" required>
+        <input type="text" id="password" required>
+        <button id="submit" </div>
     
 </body>
 </html>
