--- a/server/frontend/public/css/style.css
+++ b/server/frontend/public/css/style.css
@@ -1,5 +1,65 @@
 body {
-    background-color: rgb(31, 31, 31);
-    color: rgb(80, 80, 80);
-    font-family: sans-serif;
+  background-color: rgb(13, 10, 43);
+  color: rgb(80, 80, 80);
+  font-family: sans-serif;
+  display: flex;
+}
+#login {
+  float: left;
+  color:aliceblue;
+  background-color: rgb(36, 33, 80);
+  width: 20em;
+  height: 25em;
+  margin: 10px;
+}
+#login h1{
+    position:relative;
+    left:10px;
+}
+#submit {
+  /*size*/
+
+  width: 18em;
+  height: 40px;
+  margin: auto;
+  /*size*/
+  background-color: rgb(122, 99, 223);
+  border: rgb(122, 99, 223) 2px solid;
+  border-radius: 2px;
+  color:aliceblue;
+  font-weight: 100px;
+  /*position*/
+  position: relative;
+  top: 12px;
+  left: 10px;
+}
+#about {
+  /*position*/
+  float: left;
+  left: 20px;
+  position: relative;
+
+  top: 12px;
+  /**size**/
+  width: 40em;
+  /*color*/
+  border:  rgb(36, 33, 80) 10px solid;
+  border-radius: 2px;
+  color: aliceblue;
+  background-color: rgb(36, 33, 80);
+}
+#about img{
+    width:20em;
+    float:left;
+}
+.login {
+  overflow: hidden;
+  padding: 0.5em;
+  position: relative;
+  width: 18em;
+  /*position*/
+
+  left: 12px;
+  top: 12px;
+  /*position*/
 }
