--- a/server/frontend/view/index.html
+++ b/server/frontend/view/index.html
@@ -32,7 +32,7 @@
         </div>
         <div id = "about">
             <h1>
-            a simple applitacion<br>
+            a simple open source applitacion<br>
             writed in golang<br>
              with the best velocity<br>
              that we can reach.
